[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
tokio = {version = "1", features = ["full"]}
hyper = {version = "0.14", features = ["full"]}
chrono = "0.4.31"
